plugins {
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group = "com.dolce369"
version = "1.0-SNAPSHOT"
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.apache.ignite:ignite-core:2.16.0'
    implementation 'org.apache.ignite:ignite-spring:2.16.0'
    implementation 'org.apache.ignite:ignite-spring-boot-autoconfigure-ext:1.0.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation(platform("org.junit:junit-bom:5.9.1"))
    testImplementation("org.junit.jupiter:junit-jupiter")
}
bootRun {
    jvmArgs = [
            '--add-opens=java.base/java.nio=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED',
            '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
            '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
            '--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
            '--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED',
            '--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED',
            '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
            // Add other JVM arguments here as needed
    ]
}
tasks.test {
    useJUnitPlatform()
}

